# melange-cnfont

./: .gitignore  README.md  debugging.txt  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AEEAnnunciator.h  CMakeLists.txt  FontThin14.h  KKFontLib.h  KKFontLib20.h  OEMAppFrame.c  OEMAppx5.c  OEMAuth.c  OEMBitmap16.c  OEMBitmap24.c  OEMBitmapFuncs_priv.h  OEMBitmap_common.c  OEMBitmap_generic.h  OEMBitmap_priv.h  OEMCallHistory.c  OEMConstFiles.c  OEMDB.c  OEMDefaults.c  OEMDeviceNotifier.c  OEMDisp.c  OEMFeatures.h  OEMFlip.c  OEMFont.c  OEMFont.h  OEMIMM.c  OEMIMUI.c  OEMKeysMapping.c  OEMLogger.c  OEMLoggerBTIL.c  OEMLoggerFile.c  OEMMCFMIF_10888.c  OEMMCFMIF_10889.c  OEMMCFMIF_10890.c  OEMMCFMIF_10891.c  OEMMCFMIF_10892.c  OEMMCFMIF_16225.c  OEMMCFMIF_18067.c  OEMMCFMIF_19240.c  OEMMCFMIF_19917.c  OEMMCFMIF_19918.c  (+28 more)
app/src/main/cpp/bre/: AEEMediaUtil.c  AEENet.c  ARMLegacyABI.S  DummyMIFs.c  OEMAddrBook.c  OEMAppFuncs.c  OEMBN.c  OEMCriticalSection.c  OEMDebug.c  OEMDisplayDevImpl.c  OEMDisplayDevImpl.h  OEMFS.cpp  OEMFSPath.cpp  OEMFSPath_priv.h  OEMHeap.c  OEMMD5.c  OEMMediaCMidi.cpp  OEMMemCacheArch.c  OEMMutex.c  OEMOS.c  OEMRan.c  OEMSound.c  OEMSysClock.c  OEMTAPI.c  Shims.c  atof.c  md5.h  md5c.c  time_jul.c  time_jul.h
app/src/main/cpp/bre2/: breConfig.c  breConfig.h  breGfx.c  breGfx.h  breMainLoop.c  breMockSignature.c  breMockSignature.h  breScreenshot.c  breScreenshot.h  breStartup.c  breStartup.h  brewemu.c  brewemu.h
app/src/main/cpp/bre2/brewappmgr/: BrewAppMgr.bid
app/src/main/cpp/brewappmgr/: BREWAppMgr.min  BrewAppMgr.bid  BrewAppMgr.c  BrewAppMgr.h  BrewAppMgrSettings.h  BrewAppMgrUtils.c  BrewAppMgrUtils.h  MobileShop.bid  MobileShop.c  MobileShop.h  brewappmgr_mif.c  brewappmgrcommon_bar.c  brewappmgrln_bar.c  brewappmgrls_bar.c  oemcfg.txt  oemcfg_txt.c  rmc_inventory.txt
app/src/main/cpp/brewappmgr/mif/en/256/: brewappmgr.mfx
app/src/main/cpp/brewappmgr/mif/en/4grey/: brewappmgr.mfx
app/src/main/cpp/brewappmgr/mif/en/mono/: brewappmgr.mfx
app/src/main/cpp/brewappmgr/mif/standard/en/256/: brewappmgr.mfx
app/src/main/cpp/brewappmgr/mif/standard/en/4grey/: brewappmgr.mfx
app/src/main/cpp/brewappmgr/res/: brewappmgrcommon.brh  brewappmgrcommon.brx
app/src/main/cpp/brewappmgr/res/caticonsres/mono/: caticons_res.h
app/src/main/cpp/brewappmgr/res/languageneutral/256/: brewappmgrln.bar  brewappmgrln.brh  brewappmgrln.brx
app/src/main/cpp/brewappmgr/res/languagespecific/256/: brewappmgrls.bar  brewappmgrls.brh  brewappmgrls.brx  esbrewappmgrls.brx  huthbrewappmgrls.brx  thbrewappmgrls.brx  zhcnbrewappmgrls.brx  zhtwbrewappmgrls.brx
app/src/main/cpp/brewappmgr/res/standard/languageneutral/256/: brewappmgrln.brx
app/src/main/cpp/brewappmgr/res/standard/languageneutral/4grey/: brewappmgrln.brx
app/src/main/cpp/brewappmgr/res/standard/languageneutral/mono/: brewappmgrln.brx
app/src/main/cpp/brewappmgr/res/standard/languagespecific/en/256/: brewappmgrls.brx
app/src/main/cpp/brewappmgr/res/standard/languagespecific/en/4grey/: brewappmgrls.brx
app/src/main/cpp/brewappmgr/res/standard/languagespecific/en/mono/: brewappmgrls.brx
app/src/main/cpp/brewrt/: BREWRuntimePatcher.cpp  a1litesignal.fixed.lib  a1litesignal.lib  aeeaddrbk.fixed.lib  aeeaddrbk.lib  aeebattery.fixed.lib  aeebattery.lib  aeebci.fixed.lib  aeebci.lib  aeebtil.fixed.lib  aeebtil.lib  aeecamera.fixed.lib  aeecamera.lib  aeecodesig.fixed.lib  aeecodesig.lib  aeecontrols.fixed.lib  aeecontrols.lib  aeedb.fixed.lib  aeedb.lib  aeedialog.fixed.lib  aeedialog.lib  aeefont.fixed.lib  aeefont.lib  aeeitemstore.fixed.lib  aeeitemstore.lib  aeejoystick.fixed.lib  aeejoystick.lib  aeemenu.fixed.lib  aeemenu.lib  aeemm.fixed.lib  aeemm.lib  aeepdiparsers.fixed.lib  aeepdiparsers.lib  aeepng.fixed.lib  aeepng.lib  aeeposdet.fixed.lib  aeeposdet.lib  aeersa.fixed.lib  aeersa.lib  aeesecurity.fixed.lib  (+22 more)
app/src/main/cpp/mmapi/: MMCMXLoader.cpp  MMCMXLoader.h  MMPlayer.cpp  MMPlayer.h  MMStream.cpp  MMStream.h
app/src/main/java/io/github/usernameak/brewemulator/: EmulatorKeypad.java  EmulatorSurfaceView.java  LauncherActivity.java  MainActivity.java
app/src/main/res/values/: styles.xml
gradle/wrapper/: gradle-wrapper.properties
